HighContrast: Stop hovered emoji from disappearing
Otherwise emoji are invisible in the normal variant & nearly in Inverse.

https://bugzilla.gnome.org/show_bug.cgi?id=787279

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -3443,5 +3443,6 @@ button.emoji-section:backdrop { /* Dodge stuff inherited from backdrop button */
 
   :hover {
     background: $selected_bg_color;
+    color: $selected_fg_color;
   }
 }
